# PR-Rendering

./: .gitignore  CMakeLists.txt  ExcludeMSVC.natjmc  README.md  config.json  config_alex.json  config_empty.json  config_fabi.json  main.cpp  td::ios_base::Init::Init()'q
BlenderLib/: CMakeLists.txt
BlenderLib/include/: BlenderBridge.h
BlenderLib/include/BlenderLib/: BlenderRenderer.h
BlenderLib/python/: BlenderTest.py  ModuleTest.py
BlenderLib/python/BlenderModule/: BridgeObjects.py  __init__.py  __main__.py
BlenderLib/python/BlenderModule/Converters/: Base.py  Camera.py  Lights.py  Material.py  Mesh.py  Shader.py  Texture.py  __init__.py
BlenderLib/python/BlenderModule/Managers/: MaterialManager.py  ObjectManager.py  RenderManager.py  SceneManager.py  TextureManager.py  __init__.py
BlenderLib/python/BlenderModule/Shaders/: blend_final.osl  depth_obj.osl  diffuse_closure.osl  effect_closure.osl  label_obj.osl  simple_texture.osl  uv_to_color.osl
BlenderLib/python/BlenderModule/Test/: ModuleTest.py  __init__.py  module_test.osl  module_test_base.json  module_test_update.json
BlenderLib/python/BlenderModule/Test/Resources/: module_test.osl
BlenderLib/python/BlenderModule/Utils/: BridgeObjects.py  ClassProperty.py  Importer.py  Logger.py  OutputMuter.py  ShaderCompiler.py  TextureConverter.py  __init__.py
BlenderLib/python/Converters/: __init__.py
BlenderLib/python/Managers/: __init__.py
BlenderLib/shaders/: test_color.osl
BlenderLib/src/: BlenderBridge.cpp  BlenderRenderer.cpp
HDRLib/: CMakeLists.txt  __init__.py  __main__.py  requirements.txt
HDRLib/PyCeres/: custom_cpp_cost_functions.cpp
HDRLib/Shader/: Luminance.comp  RadianceReproject.comp  SGRender.comp  SunReproject.comp  VertexHitmap.comp
HDRLib/Utils/: ImgProcUtils.py  MeshUtils.py  ShaderUtils.py  SolverUtils.py  __init__.py
HDRLib/include/HDRLib/: LightEstimator.h
HDRLib/python/: README.md  requirements.txt
HDRLib/python/HDRModule/: __init__.py  __main__.py
HDRLib/python/HDRModule/Managers/: DataLoader.py  Estimator.py  LightDetector.py  Raytracer.py  __init__.py
HDRLib/python/HDRModule/PyCeres/: custom_cpp_cost_functions.cpp
HDRLib/python/HDRModule/Shader/: Luminance.comp  RadianceReproject.comp
HDRLib/python/HDRModule/Utils/: ImgProcUtils.py  OutputMuter.py  ShaderUtils.py  SolverUtils.py
HDRLib/src/: LightEstimator.cpp
OpenGLLib/: CMakeLists.txt  license.txt
OpenGLLib/include/: camera.h  data.h  mesh.h  model.h  pose.h  render.h  shader.h  types.h  util.h
OpenGLLib/include/OpenGLLib/: camera.h  mesh.h  model.h  render.h  shader.h
OpenGLLib/shaders/: textured3D.frag  textured3D.vs
OpenGLLib/src/: lodepng.cpp  mesh.cpp  model.cpp  pose.cpp  render.cpp  shader.cpp
Plugins/: CMakeLists.txt
Plugins/src/: blendShader.cpp  depthShader.cpp  labelShader.cpp  nodeLoader.cpp  nullFilter.cpp
ShadersLib/: CMakeLists.txt  blendShader.cpp  depthShader.cpp  labelShader.cpp  nodeLoader.cpp  nullFilter.cpp
ShadersLib/shaders/: blendShader.cpp  depthShader.cpp  labelShader.cpp  nullFilter.cpp
ShadersLib/src/: labelShader.cpp  nodeLoader.cpp
cmake/: AddAppleseed.cmake  AddAssimp.cmake  AddBlender.cmake  AddEigen.cmake  AddGLEW.cmake  AddGLFW.cmake  AddGLM.cmake  AddOpenCV.cmake  AddPhysX.cmake  AddRapidJSON.cmake  ContentHelpers.cmake  FindAssimp.cmake  FindBoost.cmake  FindEigen3.cmake  FindGLEW.cmake  FindGLFW3.cmake  FindGLM.cmake  FindOpenCV.cmake  FindOpenCV2.cmake  FindPhysX.cmake  FindRapidJSON.cmake  Findai.cmake
doc/: Annotation Format.md  Blenderseed Props.md  Blenderseed Test.md  ExcludeMSVC.natjmc  Renderfile Format.md  Status.pptx
include/: AiMesh.h  MeshBase.h  PxMesh.h  PxMeshConvex.h  PxMeshTriangle.h  Renderfile.h  SceneManager.h  SimManager.h  Transformable.h  mesh_managers.h  scene_manager.h  sim_manager.h
include/Helpers/: Annotations.h  ImageProcessing.h  JSONUtils.h  PathUtils.h  PhysxManager.h
include/Meshes/: AiMesh.h  MeshBase.h  PxMesh.h  PxMeshConvex.h  PxMeshTriangle.h  RenderMesh.h
include/Rendering/: Camera.h  Intrinsics.h  Light.h  Mesh.h  Settings.h  Shader.h  Texture.h
include/Shaders/: All.h  BlendShader.h  DepthShader.h  GlassShader.h  LabelShader.h  MetalShader.h  PBRShader.h  Shading.h
render/include/: data.h  mesh.h  model.h  render.h  shader.h  types.h  util.h
render/shaders/: textured3D.frag
render/src/: data.cpp  render.cpp
src/: AiMesh.cpp  MeshBase.cpp  PxMesh.cpp  PxMeshConvex.cpp  PxMeshTriangle.cpp  SceneManager.cpp  SimManager.cpp  main.cpp  mesh_managers.cpp  opengl_renderer.cpp  opengl_renderer.h  scene_manager.cpp  sim_manager.cpp
src/Meshes/: AiMesh.cpp  MeshBase.cpp  PxMesh.cpp  PxMeshConvex.cpp  PxMeshTriangle.cpp
tools/: DatasetMerger.py  Generator.py
